--- a/parts/cart.jade
+++ b/parts/cart.jade
@@ -142,25 +142,25 @@ template(name='payment_section')
         div
         +i name='wallet--v1' cl='ui inline image'
         .ui.inline.header ${{fixed currentUser.credit}} credit
-        +boolean_edit key='use_credit' label='use credit' direct=true
+        // +boolean_edit key='use_credit' label='use credit' direct=true
         // +topup_button amount=10
         // +topup_button amount=20
         // +topup_button amount=50
         // +topup_button amount=100
-        unless use_credit
-            div
-            .ui.basic.compact.button.select_credit_card
-                +i name='card-exchange--v1' cl='ui avatar image'
-                |existing credit card
-            .ui.basic.button.use_coupon
-                +i name='cutting-coupon' cl='ui avatar image'
-                |use coupon
-            .ui.basic.compact.button.add_gift_card
-                +i name='gift-card' cl='ui avatar image'
-                |add gift card
-            .ui.basic.compact.button.select_new_credit_card
-                +i name='plus' cl='ui avatar image'
-                |new credit card
+        // unless use_credit
+        //     div
+        //     .ui.basic.compact.button.select_credit_card
+        //         +i name='card-exchange--v1' cl='ui avatar image'
+        //         |existing credit card
+        //     .ui.basic.button.use_coupon
+        //         +i name='cutting-coupon' cl='ui avatar image'
+        //         |use coupon
+        //     .ui.basic.compact.button.add_gift_card
+        //         +i name='gift-card' cl='ui avatar image'
+        //         |add gift card
+        //     .ui.basic.compact.button.select_new_credit_card
+        //         +i name='plus' cl='ui avatar image'
+        //         |new credit card
 template(name='topup_button')                
     .ui.compact.basic.button.initiate_topup
         |+$#{amount}
